force-app/main/default/objects/SPEN_TimeWriting__c/SPEN_TimeWriting__c.object-meta.xml
<CustomObject>
    <description>To log, capture and record the time spent across sub-processes and component tasks within MTM 2</description>
    <label>Time Writing</label>
    <nameField>
        <displayFormat>TW-{0000}</displayFormat>
        <label>Time Writing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Writing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>