force-app/main/default/objects/SPEN_TimeWriting__c/fields/SPEN_FinancialInformation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_FinancialInformation__c</fullName>
    <label>Related To</label>
    <referenceTo>SPEN_FinancialInformation__c</referenceTo>
    <relationshipLabel>Time Writing</relationshipLabel>
    <relationshipName>Time_Writing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>