force-app/main/default/objects/SPEN_TimeWriting__c/fields/SPEN_HoursSpent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_HoursSpent__c</fullName>
    <label>Hours Spent</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>