force-app/main/default/objects/SPEN_TimeWriting__c/fields/SPEN_OfferQuestionsTimeSpent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OfferQuestionsTimeSpent__c</fullName>
    <label>Offer Questions Time Spent</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>