force-app/main/default/objects/SPEN_TimeWriting__c/fields/SPEN_Role__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Department Manager</fullName>
            </value>
            <value>
                <fullName>Senior Member Of Staff</fullName>
            </value>
            <value>
                <fullName>Senior Management</fullName>
                <isActive>false</isActive>
                <label>Senior Management</label>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Support Staff</fullName>
                <isActive>false</isActive>
                <label>Support Staff</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>