force-app/main/default/objects/SPEN_TimeWriting__c/fields/SPEN_Team__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Design</fullName>
            </value>
            <value>
                <fullName>System Design Manager Approval</fullName>
            </value>
            <value>
                <fullName>Engineering Design</fullName>
            </value>
            <value>
                <fullName>Engineering Design Manager Approval</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Development Manager Approval</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Delivery Manager Approval</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial Manager Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>