force-app/main/default/objects/SPEN_TimeWriting__c/fields/SPEN_TotalCost__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TotalCost__c</fullName>
    <label>Total Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>