force-app/main/default/objects/SPEN_TimeWriting__c/fields/SPEN_WorkCarriedOutBy__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkCarriedOutBy__c</fullName>
    <label>Work Carried out By</label>
    <length>250</length>
    <type>Text</type>
</CustomField>